--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ set-option -g message-fg green
 set-option -g message-bg black
 # Status Bar
 set-option -g status-left '#H#[fg=white]:#[default]#S #[fg=blue]['
-set-option -g status-right '#[fg=white,bg=blue]]#[default] %H:%M %Y-%m-%d#[default]'
+set-option -g status-right '#[fg=blue]]#[default] %H:%M %Y-%m-%d#[default]'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
