--- a/tmux.conf
+++ b/tmux.conf
@@ -42,14 +42,18 @@ set-option -g message-bg black
 set-option -g status-left '#H#[fg=white]:#[default]#S #[fg=blue]['
 set-option -g status-right '#[fg=blue]]#[default] %H:%M %Y-%m-%d#[default]'
 
+set -g @ressurect-strategy-nvim 'session'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
