Add modeline for tmux.conf
Tmux.conf conflicts with bitbake support.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,14 @@
+# vim: ft=tmux
+
 # Send prefix
 
 set-option -g prefix C-a
 bind-key C-a last-window
 bind-key a send-prefix
 
+set-option -g update-environment "SSH_AUTH_SOCK SSH_ASKPASS WINDOWID SSH_CONNECTION XAUTHORITY DISPLAY"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
@@ -57,3 +62,4 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
+
