--- a/tmux.conf
+++ b/tmux.conf
@@ -61,5 +61,5 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run -b '~/.config/tmux/plugins/tpm/tpm'
 
