--- a/tmux.conf
+++ b/tmux.conf
@@ -6,11 +6,13 @@ set-option -g prefix C-a
 bind-key C-a last-window
 bind-key a send-prefix
 
-set-option -g update-environment "SSH_AUTH_SOCK SSH_ASKPASS WINDOWID SSH_CONNECTION XAUTHORITY DISPLAY"
+set-option -g update-environment "SSH_AUTH_SOCK SSH_ASKPASS WINDOWID SSH_CONNECTION XAUTHORITY DISPLAY LIBGL_ALWAYS_INDIRECT"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "screen-256color"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+set-window-option -g mode-keys vi
+
 
 # Terminal emulator window title
 set-option -g set-titles on
@@ -28,21 +30,17 @@ set-window-option -g monitor-activity on
 
 # Colours and lengths Bar
 set-option -g status-justify left
-set-option -g status-bg black
-set-option -g status-fg default
-set-option -g status-left-fg blue
-set-option -g status-right-fg blue
+set-option -g status-style 'bg=black fg=default'
+set-option -g status-left-style fg=blue 
 set-option -g status-left-length 80
+set-option -g status-right-style fg=blue 
 set-option -g status-right-length 80
-set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-style fg=green
 
-set-option -g pane-active-border-fg black
-set-option -g pane-active-border-bg white
-set-option -g pane-border-fg white
-set-option -g pane-border-bg black
+set-option -g pane-active-border-style 'fg=black bg=white'
+set-option -g pane-border-style 'fg=white bg=black'
 
-set-option -g message-fg green
-set-option -g message-bg black
+set-option -g message-style 'fg=green bg=black'
 # Status Bar
 set-option -g status-left '#H#[fg=white]:#[default]#S #[fg=blue]['
 set-option -g status-right '#[fg=blue]]#[default] %H:%M %Y-%m-%d#[default]'
