--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,18 @@ set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-window-option -g mode-keys vi
 
+# Enable clipboard support
+set -s set-clipboard on
+
+# Fix cliboard bindings
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# Make `y` copy the selected text, not exiting the copy mode. For copy-and-exit
+# use ordinary `Enter`
+bind -T copy-mode-vi y send-keys -X copy-pipe
+
+# Clear selection on single click
+bind -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection \; select-pane
 
 # Terminal emulator window title
 set-option -g set-titles on
