auto-renumber windows and enable copy passthough

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ bind-key a send-prefix
 set-option -g update-environment "SSH_AUTH_SOCK SSH_ASKPASS WINDOWID SSH_CONNECTION XAUTHORITY DISPLAY LIBGL_ALWAYS_INDIRECT"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "screen-256color"
+set -g allow-passthrough on
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-window-option -g mode-keys vi
@@ -25,6 +26,9 @@ bind -T copy-mode-vi y send-keys -X copy-pipe
 
 # Clear selection on single click
 bind -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection \; select-pane
+
+# Renumber windows and panes
+set-option -g renumber-windows on
 
 # Terminal emulator window title
 set-option -g set-titles on
