Fix osc52 for mosh

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,14 +7,19 @@ bind-key C-a last-window
 bind-key a send-prefix
 
 set-option -g update-environment "SSH_AUTH_SOCK SSH_ASKPASS WINDOWID SSH_CONNECTION XAUTHORITY DISPLAY LIBGL_ALWAYS_INDIRECT"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# 256/true-color terminal support
 set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",*256col*:Tc"
 set -g allow-passthrough on
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-window-option -g mode-keys vi
 
 # Enable clipboard support
+# OSC-52 override for mosh support
+# see: https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
+set-option -ga terminal-overrides ",vte*:Ms=\\E]52;c;%p2%s\\7"
+set-option -ga terminal-overrides ",xterm-*:Ms=\\E]52;c;%p2%s\\7"
 set -s set-clipboard on
 
 # Fix cliboard bindings
