Move from tpm to tmuxedo
This configuration moves from tpm to tmuxedo.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,83 +2,5 @@
 
 # Send prefix
 
-set-option -g prefix C-a
-bind-key C-a last-window
-bind-key a send-prefix
-
-set-option -g update-environment "SSH_AUTH_SOCK SSH_ASKPASS WINDOWID SSH_CONNECTION XAUTHORITY DISPLAY LIBGL_ALWAYS_INDIRECT"
-# 256/true-color terminal support
-set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",*256col*:Tc"
-set -g allow-passthrough on
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-set-window-option -g mode-keys vi
-
-# Enable clipboard support
-# OSC-52 override for mosh support
-# see: https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
-set-option -ga terminal-overrides ",vte*:Ms=\\E]52;c;%p2%s\\7"
-set-option -ga terminal-overrides ",xterm-*:Ms=\\E]52;c;%p2%s\\7"
-set -s set-clipboard on
-
-# Fix cliboard bindings
-unbind -T copy-mode-vi MouseDragEnd1Pane
-
-# Make `y` copy the selected text, not exiting the copy mode. For copy-and-exit
-# use ordinary `Enter`
-bind -T copy-mode-vi y send-keys -X copy-pipe
-
-# Clear selection on single click
-bind -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection \; select-pane
-
-# Renumber windows and panes
-set-option -g renumber-windows on
-
-# Terminal emulator window title
-set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T'
-
-# Window Settings
-set-window-option -g main-pane-height 40
-set-window-option -g other-pane-height 10
-set-window-option -g main-pane-width 80
-set-window-option -g other-pane-width 80
-set-option -g status-justify left
-
-# Set window notifications
-set-window-option -g monitor-activity on
-
-# Colours and lengths Bar
-set-option -g status-justify left
-set-option -g status-style 'bg=black fg=default'
-set-option -g status-left-style fg=blue 
-set-option -g status-left-length 80
-set-option -g status-right-style fg=blue 
-set-option -g status-right-length 80
-set-window-option -g window-status-current-style fg=green
-
-set-option -g pane-active-border-style 'fg=black bg=white'
-set-option -g pane-border-style 'fg=white bg=black'
-
-set-option -g message-style 'fg=green bg=black'
-# Status Bar
-set-option -g status-left '#H#[fg=white]:#[default]#S #[fg=blue]['
-set-option -g status-right '#[fg=blue]]#[default] %H:%M %Y-%m-%d#[default]'
-
-set -g @ressurect-strategy-nvim 'session'
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.config/tmux/plugins/tpm/tpm'
+run-shell tmuxedo
 
